--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Dr. Rachael Alexandroff's Github Page
+description: a place to keep track of all the project's I've been working on
